# pairs_uav_dji_tello_api

./: CMakeLists.txt  README.md  package.xml  plugins.xml  setup.py
.obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
.obj-x86_64-linux-gnu/atomic_configure/: local_setup.fish.u7Yna  setup.fish.HBeFA
.obj-x86_64-linux-gnu/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
.obj-x86_64-linux-gnu/catkin_generated/installspace/: local_setup.fish  setup.fish  setup.sh
.obj-x86_64-linux-gnu/catkin_generated/stamps/pairs_uav_dji_tello_api/: package.xml.stamp
.obj-x86_64-linux-gnu/devel/: .rosinstall  local_setup.sh  setup.sh
.obj-x86_64-linux-gnu/devel/lib/pkgconfig/: pairs_uav_dji_tello_api.pc
.obj-x86_64-linux-gnu/devel/share/pairs_uav_dji_tello_api/cmake/: pairs_uav_dji_tello_apiConfig.cmake
config/: tello_api.yaml
config/pairs_uav_system/: platform_config.yaml  tello.yaml
debian/: changelog  control  files  ros-noetic-pairs-uav-dji-tello-api.substvars  rules
debian/.debhelper/ros-noetic-pairs-uav-dji-tello-api/: dbgsym-build-ids
debian/.debhelper/ros-noetic-pairs-uav-dji-tello-api/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/ros-noetic-pairs-uav-dji-tello-api/dbgsym-root/usr/share/doc/: ros-noetic-pairs-uav-dji-tello-api-dbgsym
debian/ros-noetic-pairs-uav-dji-tello-api/DEBIAN/: control  md5sums
debian/ros-noetic-pairs-uav-dji-tello-api/opt/ros/noetic/lib/pkgconfig/: pairs_uav_dji_tello_api.pc
debian/ros-noetic-pairs-uav-dji-tello-api/opt/ros/noetic/share/pairs_uav_dji_tello_api/cmake/: pairs_uav_dji_tello_apiConfig.cmake
debian/ros-noetic-pairs-uav-dji-tello-api/opt/ros/noetic/share/pairs_uav_dji_tello_api/config/: tello_api.yaml
debian/ros-noetic-pairs-uav-dji-tello-api/opt/ros/noetic/share/pairs_uav_dji_tello_api/scripts/: tellopy_wrapper.py
debian/ros-noetic-pairs-uav-dji-tello-api/opt/ros/noetic/share/pairs_uav_dji_tello_api/tmux/: session.yml
debian/ros-noetic-pairs-uav-dji-tello-api/usr/share/doc/ros-noetic-pairs-uav-dji-tello-api/: copyright
launch/: api.launch  flame_ros.launch.py  hw_api.launch.py  tellopy_wrapper.launch  tellopy_wrapper.launch.py
pairs_uav_dji_tello_api/: tellopy_wrapper.py
src/: api.cpp
tmux/: kill.sh  land.sh  path.py  record.sh  reference.py  rviz.rviz  session.yml  start.sh  takeoff.sh
tmux/config/: custom_config.yaml  flame.yaml  static_tfs.sh  world_config.yaml
