<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>pairs_uav_dji_tello_api</name>
  <version>2.0.0</version>
  <description>DJI TELLO API for MRS UAV System</description>

  <author email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</author>
  <maintainer email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>builtin_interfaces</depend>
  <depend>mavros_msgs</depend>
  <depend>pairs_lib</depend>
  <depend>pairs_msgs</depend>
  <depend>pairs_uav_hw_api</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>eigen</depend>
  <depend>python3-av</depend>
  <depend>tf_transformations</depend>

  <depend>backward_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
